5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4428/executions/1644_1053.log
== TEST (2019-04-15 22:30:50) 
-- CODE:

patrono = input("Digite nome do patrono: ")

if(patrono = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "<patrono> nao eh patrono do Harry Potter"

print(mensagem)

-- ERROR:
File "XXXX", line 4
    if(patrono = cervo):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:31:57) 
-- CODE:

patrono = input("Digite nome do patrono: ")

if(patrono = "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "<patrono> nao eh patrono do Harry Potter"

print(mensagem)

-- ERROR:
File "XXXX", line 4
    if(patrono = "cervo"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:33:25) 
-- CODE:

patrono = input("Digite nome do patrono: ")
patrono_harry = cervo

if(patrono = patrono_harry):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "<patrono> nao eh patrono do Harry Potter"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    if(patrono = patrono_harry):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:33:43) 
-- CODE:

patrono = input("Digite nome do patrono: ")
patrono_harry = "cervo"

if(patrono = patrono_harry):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "<patrono> nao eh patrono do Harry Potter"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    if(patrono = patrono_harry):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:34:18) 
-- CODE:

patrono = input("Digite nome do patrono: ")
patrono_harry = ("cervo")

if(patrono = patrono_harry):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "<patrono> nao eh patrono do Harry Potter"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    if(patrono = patrono_harry):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:35:36) 
-- CODE:

patrono = input("Digite nome do patrono: ")
patrono_harry = "cervo"

if(patrono = patrono_harry):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "<patrono> nao eh patrono do Harry Potter"

print(mensagem)

-- ERROR:
File "XXXX", line 5
    if(patrono = patrono_harry):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:36:49) 
-- CODE:

patrono = input("Digite nome do patrono: ")

if(patrono = "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "<patrono> nao eh patrono do Harry Potter"

print(mensagem)

-- ERROR:
File "XXXX", line 4
    if(patrono = "cervo"):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:37:55) 
-- CODE:

patrono = input("Digite nome do patrono: ")

if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "<patrono> nao eh patrono do Harry Potter"

print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:38:08) 
-- CODE:

patrono = input("Digite nome do patrono: ")

if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "<patrono> nao eh patrono do Harry Potter"

print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:39:02) 
-- CODE:

patrono = input("Digite nome do patrono: ")

if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono, "nao eh patrono do Harry Potter"

print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:39:26) 
-- CODE:

patrono = input("Digite nome do patrono: ")

if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono "nao eh patrono do Harry Potter"

print(mensagem)

-- ERROR:
File "XXXX", line 7
    mensagem = patrono "nao eh patrono do Harry Potter"
                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:40:13) 
-- CODE:

patrono = input("Digite nome do patrono: ")

if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = (patrono "nao eh patrono do Harry Potter")

print(mensagem)

-- ERROR:
File "XXXX", line 7
    mensagem = (patrono "nao eh patrono do Harry Potter")
                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:40:58) 
-- CODE:

patrono = input("Digite nome do patrono: ")

if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "patrono, nao eh patrono do Harry Potter"

print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:41:53) 
-- CODE:

patrono = input("Digite nome do patrono: ")

if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono, "nao eh patrono do Harry Potter"

print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:42:27) 
-- CODE:

patrono = input("Digite nome do patrono: ")

if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono ;"nao eh patrono do Harry Potter"

print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:42:59) 
-- CODE:

patrono = input("Digite nome do patrono: ")

if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + "nao eh patrono do Harry Potter"

print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:43:28) 
-- CODE:

patrono = input("Digite nome do patrono: ")

if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + +"nao eh patrono do Harry Potter"

print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:44:00) 
-- CODE:

patrono = input("Digite nome do patrono: ")

if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + "nao eh patrono do Harry Potter"

print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:44:39) 
-- CODE:

patrono = input("Digite nome do patrono: ")

if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono /"nao eh patrono do Harry Potter"

print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:48:31) 
-- CODE:
patrono = input("Digite nome do patrono: ")

if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + " " + "nao eh patrono do Harry Potter"

print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:48:49) 
-- CODE:
patrono = input("Digite nome do patrono: ")

if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + " " + "nao eh patrono do Harry Potter"

print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:49:03) 
-- CODE:
patrono = input("Digite nome do patrono: ")

if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + " " + "nao eh patrono do Harry Potter"

print(mensagem)

-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:49:20) 
-- CODE:
patrono = input("Digite nome do patrono: ")

if(patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + " " + "nao eh patrono do Harry Potter"

print(mensagem)

-- EXECUTION TIME:
0.278467
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
